--- a/OpenGLTutorial/OpenGLTutorial.vcxproj
+++ b/OpenGLTutorial/OpenGLTutorial.vcxproj
@@ -142,6 +142,9 @@
     <ClCompile Include="..\..\..\..\OneDrive\Documents\glad\src\glad.c" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="shader.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
