--- a/OpenGLTutorial/OpenGLTutorial.vcxproj
+++ b/OpenGLTutorial/OpenGLTutorial.vcxproj
@@ -141,6 +141,15 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\..\OneDrive\Documents\glad\src\glad.c" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="shader.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="shader.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="shader.fs" />
+    <None Include="shader.vs" />
+    <None Include="upside_down.shader.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
