--- a/OpenGLTutorial/OpenGLTutorial.vcxproj.filters
+++ b/OpenGLTutorial/OpenGLTutorial.vcxproj.filters
@@ -21,5 +21,18 @@
     <ClCompile Include="..\..\..\..\OneDrive\Documents\glad\src\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="shader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="shader.vs" />
+    <None Include="upside_down.shader.vs" />
+    <None Include="shader.fs" />
   </ItemGroup>
 </Project>
