rename shader source code, use resource manager for shaders soon, and text rendering

--- a/OpenGLTutorial/OpenGLTutorial.vcxproj
+++ b/OpenGLTutorial/OpenGLTutorial.vcxproj
@@ -76,13 +76,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\shull\OneDrive\Documents\glut-3.7\include;C:\Users\shull\OneDrive\Documents\GLM\g-truc-glm-bf71a83;C:\Users\shull\OneDrive\Documents\glad\include;C:\Users\shull\OneDrive\Documents\glfw-3.3.8.bin.WIN64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\shull\OneDrive\Documents\freetype-windows-binaries-master\include;C:\Users\shull\OneDrive\Documents\glut-3.7\include;C:\Users\shull\OneDrive\Documents\GLM\g-truc-glm-bf71a83;C:\Users\shull\OneDrive\Documents\glad\include;C:\Users\shull\OneDrive\Documents\glfw-3.3.8.bin.WIN64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\shull\OneDrive\Documents\glut-3.7\lib;C:\Users\shull\OneDrive\Documents\glfw-3.3.8.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\shull\OneDrive\Documents\freetype-windows-binaries-master\release dll\win64;C:\Users\shull\OneDrive\Documents\glut-3.7\lib;C:\Users\shull\OneDrive\Documents\glfw-3.3.8.bin.WIN64\lib-vc2022</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;glfw3dll.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -93,15 +93,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\shull\OneDrive\Documents\glut-3.7\include;C:\Users\shull\OneDrive\Documents\GLM\g-truc-glm-bf71a83;C:\Users\shull\OneDrive\Documents\glad\include;C:\Users\shull\OneDrive\Documents\glfw-3.3.8.bin.WIN64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\shull\OneDrive\Documents\freetype-windows-binaries-master\include;C:\Users\shull\OneDrive\Documents\glut-3.7\include;C:\Users\shull\OneDrive\Documents\GLM\g-truc-glm-bf71a83;C:\Users\shull\OneDrive\Documents\glad\include;C:\Users\shull\OneDrive\Documents\glfw-3.3.8.bin.WIN64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\shull\OneDrive\Documents\glut-3.7\lib;C:\Users\shull\OneDrive\Documents\glfw-3.3.8.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\shull\OneDrive\Documents\freetype-windows-binaries-master\release dll\win64;C:\Users\shull\OneDrive\Documents\glut-3.7\lib;C:\Users\shull\OneDrive\Documents\glfw-3.3.8.bin.WIN64\lib-vc2022</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;glfw3dll.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -110,13 +110,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\shull\OneDrive\Documents\glut-3.7\include;C:\Users\shull\OneDrive\Documents\GLM\g-truc-glm-bf71a83;C:\Users\shull\OneDrive\Documents\glad\include;C:\Users\shull\OneDrive\Documents\glfw-3.3.8.bin.WIN64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\shull\OneDrive\Documents\freetype-windows-binaries-master\include;C:\Users\shull\OneDrive\Documents\glut-3.7\include;C:\Users\shull\OneDrive\Documents\GLM\g-truc-glm-bf71a83;C:\Users\shull\OneDrive\Documents\glad\include;C:\Users\shull\OneDrive\Documents\glfw-3.3.8.bin.WIN64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\shull\OneDrive\Documents\glut-3.7\lib;C:\Users\shull\OneDrive\Documents\glfw-3.3.8.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\shull\OneDrive\Documents\freetype-windows-binaries-master\release dll\win64;C:\Users\shull\OneDrive\Documents\glut-3.7\lib;C:\Users\shull\OneDrive\Documents\glfw-3.3.8.bin.WIN64\lib-vc2022</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;glfw3dll.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -127,29 +127,33 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\shull\OneDrive\Documents\glut-3.7\include;C:\Users\shull\OneDrive\Documents\GLM\g-truc-glm-bf71a83;C:\Users\shull\OneDrive\Documents\glad\include;C:\Users\shull\OneDrive\Documents\glfw-3.3.8.bin.WIN64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\shull\OneDrive\Documents\freetype-windows-binaries-master\include;C:\Users\shull\OneDrive\Documents\glut-3.7\include;C:\Users\shull\OneDrive\Documents\GLM\g-truc-glm-bf71a83;C:\Users\shull\OneDrive\Documents\glad\include;C:\Users\shull\OneDrive\Documents\glfw-3.3.8.bin.WIN64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\shull\OneDrive\Documents\glut-3.7\lib;C:\Users\shull\OneDrive\Documents\glfw-3.3.8.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\shull\OneDrive\Documents\freetype-windows-binaries-master\release dll\win64;C:\Users\shull\OneDrive\Documents\glut-3.7\lib;C:\Users\shull\OneDrive\Documents\glfw-3.3.8.bin.WIN64\lib-vc2022</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;glfw3dll.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\OneDrive\Documents\glad\src\glad.c" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="resource_manager.cpp" />
     <ClCompile Include="shader.cpp" />
+    <ClCompile Include="text_renderer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="resource_manager.h" />
     <ClInclude Include="shader.h" />
+    <ClInclude Include="text_renderer.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="shader.fs" />
-    <None Include="shader.vs" />
-    <None Include="upside_down.shader.vs" />
+    <None Include="shader.fragment" />
+    <None Include="shader.vertex" />
+    <None Include="upside_down.shader.vertex" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
