--- a/OpenGLTutorial/OpenGLTutorial.vcxproj.filters
+++ b/OpenGLTutorial/OpenGLTutorial.vcxproj.filters
@@ -24,15 +24,27 @@
     <ClCompile Include="shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="text_renderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="resource_manager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="text_renderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="resource_manager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shader.vs" />
-    <None Include="upside_down.shader.vs" />
-    <None Include="shader.fs" />
+    <None Include="shader.vertex" />
+    <None Include="upside_down.shader.vertex" />
+    <None Include="shader.fragment" />
   </ItemGroup>
 </Project>
